<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostFragment">

    <EditText
        android:id="@+id/etPostText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:minHeight="48dp"
        android:padding="16dp"
        android:hint="@string/write_your_post"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnUploadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:minHeight="48dp"
        android:padding="16dp"
        android:text="@string/upload_image"
        app:layout_constraintTop_toBottomOf="@id/etPostText"
        app:layout_constraintStart_toStartOf="@id/etPostText"
        app:layout_constraintEnd_toEndOf="@id/etPostText" />

    <ImageView
        android:id="@+id/imgSelectedImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:minHeight="48dp"
        android:padding="16dp"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintTop_toBottomOf="@id/btnUploadImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:minHeight="48dp"
        android:padding="16dp"
        android:text="@string/post"
        app:layout_constraintTop_toBottomOf="@id/imgSelectedImage"
        app:layout_constraintStart_toStartOf="@id/etPostText"
        app:layout_constraintEnd_toEndOf="@id/etPostText" />
</androidx.constraintlayout.widget.ConstraintLayout>